<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.datatracker.EditorActivity">

        <EditText
            android:id="@+id/et_job_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:ems="14"
            android:hint="@string/job_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="?attr/colorTextAttr"
            android:textColorHint="?attr/colorTextHintAttr"
            app:layout_constraintBottom_toTopOf="@+id/tv_job_name_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_job_name_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/list_space"
            android:layout_marginRight="@dimen/list_space"
            android:text="@string/job_name_description"
            android:textSize="@dimen/text_subtitle"
            app:layout_constraintEnd_toEndOf="@+id/et_job_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_job_name"
            app:layout_constraintTop_toBottomOf="@+id/et_job_name" />

        <EditText
            android:id="@+id/et_job_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:hint="@string/job_content_description"
            android:inputType="textMultiLine"
            android:textColor="?attr/colorTextAttr"
            android:textColorHint="?attr/colorTextHintAttr"
            app:layout_constraintStart_toStartOf="@+id/et_job_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_job_name_desc" />

        <TextView
            android:id="@+id/tv_job_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/list_space"
            android:layout_marginRight="@dimen/list_space"
            android:text="@string/job_description"
            android:textSize="@dimen/text_subtitle"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_job_description"
            app:layout_constraintTop_toBottomOf="@+id/et_job_description" />

        <EditText
            android:id="@+id/et_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/duration"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColor="?attr/colorTextAttr"
            android:textColorHint="?attr/colorTextHintAttr"
            app:layout_constraintEnd_toStartOf="@+id/s_duration"
            app:layout_constraintStart_toStartOf="@+id/et_job_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_job_description" />

        <Spinner
            android:id="@+id/s_duration"
            android:layout_width="@dimen/spinner_size"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/et_duration"
            app:layout_constraintEnd_toEndOf="@+id/et_job_name"
            app:layout_constraintTop_toTopOf="@+id/et_duration" />

        <TextView
            android:id="@+id/tv_duration_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/list_space"
            android:layout_marginRight="@dimen/list_space"
            android:text="@string/duration_description"
            android:textSize="@dimen/text_subtitle"
            app:layout_constraintEnd_toEndOf="@+id/s_duration"
            app:layout_constraintStart_toStartOf="@+id/et_duration"
            app:layout_constraintTop_toBottomOf="@+id/et_duration" />

        <EditText
            android:id="@+id/et_frequency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/frequency"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColor="?attr/colorTextAttr"
            android:textColorHint="?attr/colorTextHintAttr"
            app:layout_constraintEnd_toStartOf="@+id/s_frequency"
            app:layout_constraintStart_toStartOf="@+id/et_duration"
            app:layout_constraintTop_toBottomOf="@+id/tv_duration_desc" />

        <Spinner
            android:id="@+id/s_frequency"
            android:layout_width="@dimen/spinner_size"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/et_frequency"
            app:layout_constraintEnd_toEndOf="@+id/s_duration"
            app:layout_constraintTop_toTopOf="@+id/et_frequency" />

        <TextView
            android:id="@+id/tv_frequency_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="@dimen/list_space"
            android:text="@string/frequency_description"
            android:textSize="@dimen/text_subtitle"
            app:layout_constraintEnd_toEndOf="@+id/s_frequency"
            app:layout_constraintStart_toStartOf="@+id/et_frequency"
            app:layout_constraintTop_toBottomOf="@+id/et_frequency" />

        <Button
            android:id="@+id/bt_startTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:onClick="startingTime"
            android:text="@string/starting_time"
            app:layout_constraintEnd_toEndOf="@+id/s_frequency"
            app:layout_constraintStart_toStartOf="@+id/et_frequency"
            app:layout_constraintTop_toBottomOf="@+id/tv_frequency_desc" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/sw_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/alarm"
            app:layout_constraintEnd_toEndOf="@+id/bt_startTime"
            app:layout_constraintTop_toBottomOf="@+id/bt_startTime"
            app:showText="false" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>




