<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:CircleProgressView="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.datatracker.JobActivity">

    <at.grabner.circleprogress.CircleProgressView
        android:id="@+id/cv_completing"
        android:layout_width="@dimen/cpv_size"
        android:layout_height="@dimen/cpv_size"
        android:padding="@dimen/activity_vertical_margin"
        CircleProgressView:cpv_autoTextSize="true"
        CircleProgressView:cpv_barColor="?attr/primaryColorAttr"
        CircleProgressView:cpv_barWidth="@dimen/cpv_barWidth"
        CircleProgressView:cpv_innerContourSize="0dp"
        CircleProgressView:cpv_maxValue="100"
        CircleProgressView:cpv_outerContourSize="0dp"
        CircleProgressView:cpv_rimColor="?attr/accentColorAttr"
        CircleProgressView:cpv_rimWidth="@dimen/cpv_barWidth"
        CircleProgressView:cpv_seekMode="false"
        CircleProgressView:cpv_showUnit="true"
        CircleProgressView:cpv_spinColor="?attr/primaryColorAttr"
        CircleProgressView:cpv_textColor="?attr/primaryLightColorAttr"
        CircleProgressView:cpv_textScale="1"
        CircleProgressView:cpv_unit="%"
        CircleProgressView:cpv_unitColor="?attr/primaryLightColorAttr"
        CircleProgressView:cpv_unitPosition="right_top"
        CircleProgressView:cpv_unitScale="1"
        CircleProgressView:cpv_value="0"
        CircleProgressView:layout_constraintEnd_toEndOf="parent"
        CircleProgressView:layout_constraintHorizontal_bias="0.5"
        CircleProgressView:layout_constraintStart_toStartOf="parent" />


    <ProgressBar
        android:id="@+id/loading_indicator"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        CircleProgressView:layout_constraintEnd_toEndOf="parent"
        CircleProgressView:layout_constraintStart_toStartOf="parent"
        CircleProgressView:layout_constraintTop_toBottomOf="@+id/ll_labels" />

    <!-- Empty view for the list -->
    <LinearLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@+id/rv_list">

        <TextView
            android:id="@+id/empty_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/empty_view_title_text"
            android:textAppearance="?android:textAppearanceMedium"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/empty_subtitle_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/spacing"
            android:text="@string/empty_view_subtitle_text"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="?attr/colorTextHintAttr"
            android:visibility="invisible" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        CircleProgressView:layout_constraintBottom_toBottomOf="parent"
        CircleProgressView:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_24dp" />

    <LinearLayout
        android:id="@+id/ll_labels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/divider_attr"
        CircleProgressView:layout_constraintTop_toBottomOf="@+id/cv_completing">

        <TextView
            android:id="@+id/tv_label_Y"
            android:layout_width="0dp"
            android:layout_height="@dimen/label_size"
            android:layout_marginBottom="@dimen/divider"
            android:layout_marginTop="@dimen/divider"
            android:layout_weight="1"
            android:background="?attr/color_axis"
            android:gravity="center"
            android:text="@string/dialog_edit_data_label_y"
            android:textAllCaps="true"
            android:textSize="@dimen/text_title" />

        <TextView
            android:id="@+id/tv_label_X"
            android:layout_width="0dp"
            android:layout_height="@dimen/label_size"
            android:layout_marginBottom="@dimen/divider"
            android:layout_marginTop="@dimen/divider"
            android:layout_weight="1"
            android:background="?attr/color_axis"
            android:gravity="center"
            android:text="@string/dialog_edit_data_label_x"
            android:textAllCaps="true"
            android:textSize="@dimen/text_title" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        CircleProgressView:layout_constraintBottom_toBottomOf="parent"
        CircleProgressView:layout_constraintEnd_toEndOf="parent"
        CircleProgressView:layout_constraintStart_toStartOf="parent"
        CircleProgressView:layout_constraintTop_toBottomOf="@+id/ll_labels" />
</android.support.constraint.ConstraintLayout>